# obsidian-syncer

./: 404.html  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docker.yml  docs.yml
configuration/: index.html
deployment/: index.html
docs/: authentication.md  configuration.md  deployment.md  index.md
search/: search_index.json
site/: index.html
site/authentication/: index.html
site/deployment/: index.html
site/search/: search_index.json
src/obsidian_syncer/: config.py  keep.py  main.py  nextcloud.py  obsidian.py
tests/: test_config.py
